--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="HIDABO S.A. - Suplementos minerales para bovinos y soluciones técnicas para el agro">
+  <meta name="description" content="HIDABO - Suplementos minerales para bovinos y soluciones técnicas para el Agro">
   <title>HIDABO S.A.</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -20,12 +20,12 @@
 
   <section class="hero">
     <h1>Nutriendo el campo, impulsando la producción</h1>
-    <p>Suplementos minerales para bovinos y soluciones técnicas para el agro</p>
+    <p>Suplementos minerales para bovinos y soluciones técnicas para el Agro</p>
   </section>
 
   <section id="quienes" class="section">
     <h2>Quiénes Somos</h2>
-    <p>En HIDABO S.A. trabajamos para ofrecer soluciones técnicas e innovadoras para el agro, con una amplia experiencia en la fabricación de suplementos minerales para bovinos y ceniza de hueso.</p>
+    <p>En HIDABO trabajamos para ofrecer soluciones técnicas e innovadoras para el agro, con una amplia experiencia en la fabricación de suplementos minerales para bovinos y ceniza de hueso.</p>
   </section>
 
   <section id="productos" class="section">
@@ -48,12 +48,12 @@
 
   <section id="contacto" class="section">
     <h2>Contacto</h2>
-    <p>📞 Teléfono: +54 9 1234 5678</p>
-    <p>✉️ Email: contacto@hidabo.com</p>
+    <p>📞 Teléfono: +54 9 3774 447740</p>
+    <p>✉️ Email: botteroivan@hidabo.com</p>
   </section>
 
   <footer>
-    &copy; 2025 HIDABO S.A. - Todos los derechos reservados.
+    &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
   </footer>
 </body>
 </html>
