--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="producto">
         <h3>Ceniza de Hueso</h3>
-        <p>Producción de ceniza de hueso de alta calidad, ideal para mejorar suelos.</p>
+        <p>Producción de ceniza de hueso de alta calidad, para el aporte de fosforo en bovinos.</p>
       </div>
       <div class="producto">
         <h3>Soluciones Técnicas</h3>
