--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="logo_blanco.png" alt="HIDABO Logo">
+    <img src="Logo.hidabo.blanco.png" alt="HIDABO Logo">
     <nav>
       <a href="#quienes">Quiénes Somos</a>
       <a href="#productos">Productos</a>
