--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <section id="contacto" class="section">
     <h2>Contacto</h2>
-    <p>📞 Teléfono: +54 9 3774 447740</p>
+    <p>📞 WhatsApp: +54 9 3774 447740</p>
     <p>✉️ Email: botteroivan@hidabo.com</p>
   </section>
 
