--- a/index.html
+++ b/index.html
@@ -46,11 +46,21 @@
     </div>
   </section>
 
-  <section id="contacto" class="section">
-    <h2>Contacto</h2>
-    <p>📞 WhatsApp: +54 9 3774 447740</p>
-    <p>✉️ Email: botteroivan@hidabo.com</p>
-  </section>
+<section id="contacto" class="section">
+  <h2>Contacto</h2>
+
+  <div class="contact-card">
+    <h3>Bottero Iván</h3>
+    <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
+    <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
+  </div>
+
+  <div class="contact-card">
+    <h3>Hernán Cardozo</h3>
+    <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank">+54 9 3774 637842</a></p>
+    <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
+  </div>
+</section>
 
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
