--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <h2>Contacto</h2>
 
   <div class="contact-card">
-    <h3>Bottero Iván</h3>
+    <h3>Iván Bottero</h3>
     <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
     <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
   </div>
