--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="HIDABO - Suplementos minerales para bovinos y soluciones técnicas para el Agro">
+  <meta name="description" content="HIDABO - Suplementos minerales para bovinos y soluciones técnicas para el Agro.">
   <title>HIDABO</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -19,8 +19,8 @@
   </header>
 
   <section class="hero">
-    <h1>Nutriendo el campo, impulsando la producción</h1>
-    <p>Suplementos minerales para bovinos y soluciones técnicas para el Agro</p>
+    <h1>Nutriendo el campo, impulsando la producción.</h1>
+    <p>Suplementos minerales para bovinos y soluciones técnicas para el Agro.</p>
   </section>
 
   <section id="quienes" class="section">
