--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="HIDABO - Suplementos minerales para bovinos y soluciones técnicas para el Agro.">
   <title>HIDABO</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
   <header>
