--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
-  <header>
+  <header class="hero">
     <img src="Logo.hidabo.blanco.png" alt="HIDABO Logo">
     <nav>
       <a href="#quienes">Quiénes Somos</a>
