--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <section id="quienes" class="section">
     <h2>Quiénes Somos</h2>
-    <p>En HIDABO trabajamos para ofrecer soluciones técnicas e innovadoras para el agro, con una amplia experiencia en la fabricación de suplementos minerales para bovinos y ceniza de hueso.</p>
+    <p>Hidabo es la solución confiable para suplementar en el litoral, con asesoría técnica y logística propia. Ofrecemos soluciones técnicas para el agro, y tenemos una amplia experiencia en la fabricación de suplementos minerales</p>
   </section>
 
   <section id="productos" class="section">
