--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <div class="productos">
       <div class="producto">
         <h3>Suplementos Minerales</h3>
-        <p>Fórmulas diseñadas para optimizar la salud y rendimiento del ganado bovino.</p>
+        <p>Fórmulas diseñadas para optimizar la salud y rendimiento del ganado bovino en funcion de especificaciones del cliente.</p>
       </div>
       <div class="producto">
-        <h3>Ceniza de Hueso</h3>
-        <p>Producción de ceniza de hueso de alta calidad, para el aporte de fosforo en bovinos.</p>
+        <h3>Suplementación mineral segura</h3>
+        <p>Elaboramos fósforo nutricional pensado para bovinos, con alta biodisponibilidad.</p>
       </div>
       <div class="producto">
         <h3>Soluciones Técnicas</h3>
