--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
   <h2>Contacto</h2>
 
   <div class="contact-card">
-    <h3>Iván Bottero</h3>
+    <h3>Iván Bottero - Administracion</h3>
     <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
     <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
   </div>
 
   <div class="contact-card">
-    <h3>Hernán Cardozo</h3>
+    <h3>Hernán Cardozo - Ventas</h3>
     <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank">+54 9 3774 637842</a></p>
     <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
   </div>
