--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <p>Fórmulas diseñadas para optimizar la salud y rendimiento del ganado bovino en funcion de especificaciones del cliente.</p>
       </div>
       <div class="producto">
-        <h3>Suplementación mineral segura</h3>
-        <p>Elaboramos fósforo nutricional pensado para bovinos, con alta biodisponibilidad.</p>
+        <h3>Suplementación de alta biodisponibilidad</h3>
+        <p>Elaboramos fósforo nutricional pensado para bovinos</p>
       </div>
       <div class="producto">
         <h3>Soluciones Técnicas</h3>
