--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -44,24 +43,28 @@
         <h3>Soluciones Técnicas</h3>
         <p>Asesoramiento especializado para impulsar la productividad agropecuaria.</p>
       </div>
+      <div class="producto">
+        <h3>Gestión Logística</h3>
+        <p>Ofrecemos entrega directa a campo y servicio de camiones jaula para transporte de ganado.</p>
+      </div>
     </div>
   </section>
 
-<section id="contacto" class="section">
-  <h2>Contacto</h2>
+  <section id="contacto" class="section">
+    <h2>Contacto</h2>
 
-  <div class="contact-card">
-    <h3>Iván Bottero - Administracion</h3>
-    <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
-    <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
-  </div>
+    <div class="contact-card">
+      <h3>Iván Bottero - Administracion</h3>
+      <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
+      <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
+    </div>
 
-  <div class="contact-card">
-    <h3>Hernán Cardozo - Ventas</h3>
-    <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank">+54 9 3774 637842</a></p>
-    <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
-  </div>
-</section>
+    <div class="contact-card">
+      <h3>Hernán Cardozo - Ventas</h3>
+      <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank">+54 9 3774 637842</a></p>
+      <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
+    </div>
+  </section>
 
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
