--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section id="quienes" class="section">
     <h2>Quiénes Somos</h2>
-    <p>Hidabo es la solución confiable para suplementar en el litoral, con asesoría técnica y logística propia. Ofrecemos soluciones técnicas para el agro, y tenemos una amplia experiencia en la fabricación de suplementos minerales</p>
+    <p>Hidabo es la solución confiable para suplementar en el litoral, con asesoría técnica y logística propia. Ofrecemos soluciones técnicas para el agro, y tenemos una amplia experiencia en la fabricación de suplementos minerales.</p>
   </section>
 
   <section id="productos" class="section">
@@ -37,7 +37,7 @@
       </div>
       <div class="producto">
         <h3>Suplementación de alta biodisponibilidad</h3>
-        <p>Elaboramos fósforo nutricional pensado para bovinos</p>
+        <p>Elaboramos fósforo nutricional pensado para bovinos.</p>
       </div>
       <div class="producto">
         <h3>Soluciones Técnicas</h3>
