--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section id="quienes" class="section">
     <h2>Quiénes Somos</h2>
-    <p>Hidabo es la solución confiable para suplementar en el litoral, con asesoría técnica y logística propia. Ofrecemos soluciones técnicas para el agro, y tenemos una amplia experiencia en la fabricación de suplementos minerales.</p>
+    <p>Hidabo comenzó en 2004 como un emprendimiento familiar en Curuzú Cuatiá, con el objetivo de dar respuesta a una necesidad concreta del campo: la falta de fósforo en los suelos del litoral. Desde entonces, desarrollamos una planta propia para fabricar suplementos minerales confiables y adaptados a las condiciones de la región. Con más de 20 años de experiencia, trabajamos codo a codo con productores de todo el país, ofreciendo asesoría técnica, atención personalizada y logística propia. Nuestra forma de crecer siempre fue simple: Cumplir con el productor.</p>
   </section>
 
   <section id="productos" class="section">
