--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="productos">
       <div class="producto">
         <h3>Suplementos Minerales</h3>
-        <p>Fórmulas diseñadas para optimizar la salud y rendimiento del ganado bovino en funcion de especificaciones del cliente.</p>
+        <p>Fórmulas diseñadas para optimizar la salud y rendimiento del ganado bovino en función de especificaciones del cliente.</p>
       </div>
       <div class="producto">
         <h3>Suplementación de alta biodisponibilidad</h3>
@@ -54,7 +54,7 @@
     <h2>Contacto</h2>
 
     <div class="contact-card">
-      <h3>Iván Bottero - Administracion</h3>
+      <h3>Iván Bottero - Administración</h3>
       <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
       <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
     </div>
