--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <a href="#quienes">Quiénes Somos</a>
       <a href="#productos">Productos</a>
-      <a href="fotos.html">Fotos</a>
+      <a href="fotos.html">Academia Hidabo</a>
       <a href="#contacto">Contacto</a>
     </nav>
   </header>
