Actualiza sección Quiénes Somos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 
   <section id="quienes" class="section">
     <h2>Quiénes Somos</h2>
-    <p>Hidabo comenzó en 2004 como un emprendimiento familiar en Curuzú Cuatiá, con el objetivo de dar respuesta a una necesidad concreta del campo: la falta de fósforo en los suelos del litoral. Desde entonces, desarrollamos una planta propia para fabricar suplementos minerales confiables y adaptados a las condiciones de la región. Con más de 20 años de experiencia, trabajamos codo a codo con productores de todo el país, ofreciendo asesoría técnica, atención personalizada y logística propia. Nuestra forma de crecer siempre fue simple: Cumplir con el productor.</p>
+    <div class="quienes-block">
+      <p>Hidabo nació en 2004 en Curuzú Cuatiá como un emprendimiento familiar con un objetivo claro: dar respuesta a una necesidad del campo, la falta de fósforo en los suelos del litoral.</p>
+      <p>Con <strong>más de 20 años de experiencia</strong>, desarrollamos una <strong>planta propia</strong> para fabricar suplementos minerales confiables, efectivos y adaptados a las condiciones reales de la región.</p>
+      <p><strong>Trabajamos codo a codo con los productores</strong>, ofreciendo asesoría técnica, atención personalizada y logística propia para garantizar que cada solución llegue a tiempo y en forma.</p>
+      <p>Nuestra filosofía de crecimiento siempre fue simple: <strong>Cumplir con el productor.</strong></p>
+    </div>
   </section>
 
   <section id="productos" class="section">
