Add photo carousel to Quienes Somos

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
       <p><strong>Trabajamos codo a codo con los productores</strong>, ofreciendo asesoría técnica, atención personalizada y logística propia para garantizar que cada solución llegue a tiempo y en forma.</p>
       <p>Nuestra filosofía de crecimiento siempre fue simple: <strong>Cumplir con el productor.</strong></p>
     </div>
+    <div class="carousel">
+      <img src="img/foto1.jpeg" alt="HIDABO 1" class="carousel-image active">
+      <img src="img/foto2.jpeg" alt="HIDABO 2" class="carousel-image">
+      <img src="img/foto3.jpeg" alt="HIDABO 3" class="carousel-image">
+      <img src="img/foto4.jpeg" alt="HIDABO 4" class="carousel-image">
+      <img src="img/foto5.jpeg" alt="HIDABO 5" class="carousel-image">
+      <img src="img/foto6.jpeg" alt="HIDABO 6" class="carousel-image">
+      <img src="img/foto7.jpeg" alt="HIDABO 7" class="carousel-image">
+      <img src="img/foto8.jpeg" alt="HIDABO 8" class="carousel-image">
+    </div>
   </section>
 
   <section id="productos" class="section">
@@ -75,5 +85,18 @@
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
   </footer>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const imgs = document.querySelectorAll("#quienes .carousel-image");
+      let current = 0;
+      if (imgs.length > 0) {
+        setInterval(function() {
+          imgs[current].classList.remove("active");
+          current = (current + 1) % imgs.length;
+          imgs[current].classList.add("active");
+        }, 2000);
+      }
+    });
+  </script>
 </body>
 </html>
