Update Academia Hidabo content

--- a/fotos.html
+++ b/fotos.html
@@ -25,49 +25,44 @@
   <section id="academia" class="section">
     <div class="academia">
       <div class="card">
-        <img src="https://picsum.photos/400/250?image=1050" alt="Nutrición">
-        <h3>Consejos de Nutrición</h3>
-        <p>Ideas básicas para mejorar la dieta del rodeo.</p>
-        <button class="toggle-btn">Leer más</button>
-        <div class="extra-content">
-          <p>Aquí podrán encontrarse recomendaciones sobre minerales esenciales, formas de suministro y evaluación de resultados.</p>
-        </div>
+        <img src="fotosacademia/1.png" alt="Fósforo local y eficiente">
+        <h3>Fósforo local y eficiente</h3>
+        <p class="subtitulo">Ceniza de huesos: alternativa al fosfato importado</p>
+        <p>Fuente nacional con alta disponibilidad (≈85% en citrato). Sustituye fosfatos inorgánicos importados sin depender del dólar ni la logística externa.</p>
       </div>
       <div class="card">
-        <img src="https://picsum.photos/400/250?image=1060" alt="Productores">
-        <h3>Academia para Productores</h3>
-        <p>Estrategias prácticas para el día a día.</p>
-        <button class="toggle-btn">Leer más</button>
-        <div class="extra-content">
-          <p>Desde el manejo de rodeos hasta el uso de herramientas tecnológicas, este espacio brinda información pensada para el productor.</p>
-        </div>
+        <img src="fotosacademia/2.jpg" alt="Diagnóstico y consecuencias">
+        <h3>Diagnóstico y consecuencias</h3>
+        <p class="subtitulo">La deficiencia de fósforo en el NEA impacta producción</p>
+        <p>Forrajes &lt;0,20 g/100 g MS y fósforo en sangre &lt;2,8 mg/dl generan menor apetito, bajo crecimiento y preñez del 45–48%. La suplementación revierte este cuadro.</p>
       </div>
       <div class="card">
-        <img src="https://picsum.photos/400/250?image=1070" alt="Cría eficiente">
-        <h3>Claves para la Cría Eficiente</h3>
-        <p>Buenas prácticas para optimizar resultados.</p>
-        <button class="toggle-btn">Leer más</button>
-        <div class="extra-content">
-          <p>Sección dedicada a resolver dudas frecuentes y repasar cómo aprovechar al máximo los recursos disponibles.</p>
-        </div>
+        <img src="fotosacademia/3.jpg" alt="Eficiencia reproductiva probada">
+        <h3>Eficiencia reproductiva probada</h3>
+        <p class="subtitulo">Suplementar al 9% de P mejora la preñez y ciclicidad</p>
+        <p>Ensayos del INTA muestran 97,2% de preñez y 100% de ciclicidad posservicio en vacas con mezcla al 9% de fósforo, superando al 6% en ambos indicadores.</p>
+      </div>
+      <div class="card">
+        <img src="fotosacademia/4.png" alt="Más fósforo, más kilos">
+        <h3>Más fósforo, más kilos</h3>
+        <p class="subtitulo">Mejor crecimiento en novillos suplementados</p>
+        <p>En dos años, los animales suplementados con mezcla al 6% de fósforo ganaron 68 kg más que los testigos. Clave para mejorar la eficiencia de recría.</p>
+      </div>
+      <div class="card">
+        <img src="fotosacademia/5.jpeg" alt="Eficiencia sin riesgos sanitarios">
+        <h3>Eficiencia sin riesgos sanitarios</h3>
+        <p class="subtitulo">Ceniza y harina: igual disponibilidad, distinta regulación</p>
+        <p>La calcinación mantiene la hidroxiapatita. La ceniza, autorizada por SENASA, aporta fósforo con alta biodisponibilidad y sin restricciones sanitarias.</p>
+      </div>
+      <div class="card">
+        <img src="fotosacademia/6.jpg" alt="Lactancia sin pérdida de estado">
+        <h3>Lactancia sin pérdida de estado</h3>
+        <p class="subtitulo">El fósforo sostiene la condición y producción láctea</p>
+        <p>Durante la lactancia, la carencia de fósforo provoca pérdida de peso y menor producción. Suplementar permite sostener el rendimiento de la vaca y su cría.</p>
       </div>
     </div>
   </section>
 
-  <script>
-    document.querySelectorAll('.toggle-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const content = btn.nextElementSibling;
-        if (content.style.display === 'block') {
-          content.style.display = 'none';
-          btn.textContent = 'Leer más';
-        } else {
-          content.style.display = 'block';
-          btn.textContent = 'Cerrar';
-        }
-      });
-    });
-  </script>
 
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
