--- a/fotos.html
+++ b/fotos.html
@@ -58,30 +58,27 @@
         <img src="fotosacademia/4.png" alt="Más fósforo, más kilos">
         <h3>Más fósforo, más kilos</h3>
         <p class="subtitulo">Mejor crecimiento en novillos suplementados</p>
-        <p>En dos años, los animales suplementados con mezcla al 6% de fósforo ganaron 68 kg más que los testigos.</p>
         <button class="toggle-btn">Ver más</button>
         <div class="extra-content">
-          <p>Clave para mejorar la eficiencia de recría.</p>
+          <p>En dos años, los animales suplementados con mezcla al 6% de fósforo ganaron 68 kg más que los testigos.Clave para mejorar la eficiencia de recría.</p>
         </div>
       </div>
       <div class="card">
         <img src="fotosacademia/5.jpeg" alt="Eficiencia sin riesgos sanitarios">
         <h3>Eficiencia sin riesgos sanitarios</h3>
         <p class="subtitulo">Ceniza y harina: igual disponibilidad, distinta regulación</p>
-        <p>La calcinación mantiene la hidroxiapatita.</p>
         <button class="toggle-btn">Ver más</button>
         <div class="extra-content">
-          <p>La ceniza, autorizada por SENASA, aporta fósforo con alta biodisponibilidad y sin restricciones sanitarias.</p>
+          <p>La calcinación mantiene la hidroxiapatita.La ceniza, autorizada por SENASA, aporta fósforo con alta biodisponibilidad y sin restricciones sanitarias.</p>
         </div>
       </div>
       <div class="card">
         <img src="fotosacademia/6.jpg" alt="Lactancia sin pérdida de estado">
         <h3>Lactancia sin pérdida de estado</h3>
         <p class="subtitulo">El fósforo sostiene la condición y producción láctea</p>
-        <p>Durante la lactancia, la carencia de fósforo provoca pérdida de peso y menor producción.</p>
         <button class="toggle-btn">Ver más</button>
         <div class="extra-content">
-          <p>Suplementar permite sostener el rendimiento de la vaca y su cría.</p>
+          <p>Durante la lactancia, la carencia de fósforo provoca pérdida de peso y menor producción.Suplementar permite sostener el rendimiento de la vaca y su cría.</p>
         </div>
       </div>
     </div>
