Add contact card for Dr. Dario Bottero

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
       <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank">+54 9 3774 637842</a></p>
       <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
     </div>
+    <div class="contact-card">
+      <h3>Dr. Dario Bottero - Asesoría Técnica</h3>
+      <p>Médico Veterinario - Matrícula Profesional 0081</p>
+      <p>📞 WhatsApp: <a href="https://wa.me/5493774637841" target="_blank">+54 9 3774 637841</a></p>
+      <p>📧 Email: <a href="mailto:asesoria@hidabo.com">asesoria@hidabo.com</a></p>
+    </div>
   </section>
 
   <footer>
