--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="HIDABO - Suplementos minerales para bovinos y soluciones técnicas para el Agro.">
+  <meta name="description" content="HIDABO - Suplementos minerales para rumiantes y soluciones técnicas para el Agro.">
   <title>HIDABO</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
@@ -28,7 +28,7 @@
     <h2>Quiénes Somos</h2>
     <div class="quienes-block">
       <p>Hidabo nació en 2004 en Curuzú Cuatiá como un emprendimiento familiar con un objetivo claro: dar respuesta a una necesidad del campo, la falta de fósforo en los suelos del litoral.</p>
-      <p>Con <strong>más de 20 años de experiencia</strong>, desarrollamos una <strong>planta propia</strong> para fabricar suplementos minerales confiables, efectivos y adaptados a las condiciones reales de la región.</p>
+      <p>Con <strong>más de 20 años de experiencia</strong>, desarrollamos una <strong>planta propia</strong> para fabricar alimentos balanceados y suplementos minerales confiables, efectivos y adaptados a las condiciones reales de la región.</p>
       <p><strong>Trabajamos codo a codo con los productores</strong>, ofreciendo asesoría técnica, atención personalizada y logística propia para garantizar que cada solución llegue a tiempo y en forma.</p>
       <p>Nuestra filosofía de crecimiento siempre fue simple: <strong>Cumplir con el productor.</strong></p>
     </div>
@@ -70,18 +70,18 @@
     <h2>Contacto</h2>
 
     <div class="contact-card">
-      <h3>Iván Bottero - Administración</h3>
+      <h3>Iván Bottero - Dirección y planificación</h3>
       <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
       <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
     </div>
 
     <div class="contact-card">
-      <h3>Hernán Cardozo - Ventas</h3>
+      <h3>Hernán Cardozo - Administración y desarrollo comercial</h3>
       <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank">+54 9 3774 637842</a></p>
       <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
     </div>
     <div class="contact-card">
-      <h3>Dr. Dario Bottero - Asesoría Técnica</h3>
+      <h3>Dr. Dario Bottero - Soporte técnico y asesoramiento</h3>
       <p>Médico Veterinario - Matrícula Profesional 0081</p>
       <p>📞 WhatsApp: <a href="https://wa.me/5493774637841" target="_blank">+54 9 3774 637841</a></p>
       <p>📧 Email: <a href="mailto:asesoria@hidabo.com">asesoria@hidabo.com</a></p>
