Make logo link to homepage

--- a/fotos.html
+++ b/fotos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="hero">
-    <img src="Logo.hidabo.blanco.png" alt="HIDABO Logo">
+    <a href="index.html" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
     <nav>
       <a href="index.html#quienes">Quiénes Somos</a>
       <a href="index.html#productos">Productos</a>
