--- a/fotos.html
+++ b/fotos.html
@@ -41,7 +41,7 @@
       
         <button class="toggle-btn">Ver más</button>
         <div class="extra-content">
-          <p>Forrajes &lt;0,20 g/100 g MS y fósforo en sangre &lt;2,8 mg/dl generan menor apetito y bajo crecimiento.La suplementación revierte este cuadro y mejora la preñez del 45–48%.</p>
+          <p>Forrajes &lt;0,20 g/100 g MS y fósforo en sangre &lt;2,8 mg/dl generan menor apetito y bajo crecimiento.La suplementación revierte este cuadro y mejora la preñez.</p>
         </div>
       </div>
       <div class="card">
@@ -51,7 +51,7 @@
         
         <button class="toggle-btn">Ver más</button>
         <div class="extra-content">
-          <p>Ensayos del INTA muestran 97,2% de preñez y 100% de ciclicidad posservicio.Las vacas suplementadas al 9% superaron al 6% en ambos indicadores.</p>
+          <p>Ensayos del INTA muestran 97,2% de preñez y 100% de ciclicidad posservicio.Las vacas suplementadas al 9% superaron a aquellas al 6% en ambos indicadores.</p>
         </div>
       </div>
       <div class="card">
