Fix logo link to root domain

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="hero">
-    <a href="index.html" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
+    <a href="/" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
     <nav>
       <a href="#quienes">Quiénes Somos</a>
       <a href="#productos">Productos</a>
