--- a/fotos.html
+++ b/fotos.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header class="hero">
-    <a href="index.html" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
+    <a href="/" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
     <nav>
-      <a href="index.html#quienes">Quiénes Somos</a>
-      <a href="index.html#productos">Productos</a>
+      <a href="/#quienes">Quiénes Somos</a>
+      <a href="/#productos">Productos</a>
       <a href="fotos.html">Academia Hidabo</a>
-      <a href="index.html#contacto">Contacto</a>
+      <a href="/#contacto">Contacto</a>
     </nav>
   </header>
 
