--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <section class="hero">
     <h1>Nutriendo el campo, impulsando la producción.</h1>
-    <p>Suplementos minerales para bovinos y soluciones técnicas para el Agro.</p>
+    <p>Suplementos minerales para animales y soluciones técnicas para el Agro.</p>
   </section>
 
   <section id="quienes" class="section">
