--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
       <img src="img/foto6.jpeg" alt="HIDABO 6" class="carousel-image">
       <img src="img/foto7.jpeg" alt="HIDABO 7" class="carousel-image">
       <img src="img/foto8.jpeg" alt="HIDABO 8" class="carousel-image">
-    </div>
-  </section>
+      </div>
+      <div class="academia-cta">
+        <a href="fotos.html" class="btn-academia">Ver Academia Hidabo</a>
+      </div>
+    </section>
 
   <section id="productos" class="section">
     <h2>Nuestros Productos</h2>
