--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="HIDABO - Suplementos minerales para rumiantes y soluciones técnicas para el Agro.">
-  <title>HIDABO</title>
+  <meta name="description" content="Hidabo fabrica suplementos minerales para bovinos a base de ceniza de hueso, ofreciendo logística directa a campo, asesoramiento técnico y transporte de ganado.">
+  <title>Hidabo | Suplementos Minerales para Bovinos a base de Ceniza de Hueso</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
@@ -20,8 +20,8 @@
   </header>
 
   <section class="hero">
-    <h1>Nutriendo el campo, impulsando la producción.</h1>
-    <p>Suplementos minerales para rumiantes y soluciones técnicas para el Agro.</p>
+    <h1>Suplementos minerales para bovinos y soluciones técnicas para el Agro</h1>
+    <p>Nutriendo el campo, impulsando la producción.</p>
   </section>
 
   <section id="quienes" class="section">
