--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <section id="quienes" class="section">
     <h2>Quiénes Somos</h2>
     <div class="quienes-block">
-      <p>Hidabo nació en 2004 en Curuzú Cuatiá como un emprendimiento familiar con un objetivo claro: dar respuesta a una necesidad del campo, la falta de fósforo en los suelos del litoral.</p>
-      <p>Con <strong>más de 20 años de experiencia</strong>, desarrollamos una <strong>planta propia</strong> para fabricar alimentos balanceados y suplementos minerales confiables, efectivos y adaptados a las condiciones reales de la región.</p>
-      <p><strong>Trabajamos codo a codo con los productores</strong>, ofreciendo asesoría técnica, atención personalizada y logística propia para garantizar que cada solución llegue a tiempo y en forma.</p>
-      <p>Nuestra filosofía de crecimiento siempre fue simple: <strong>Cumplir con el productor.</strong></p>
+      <p>Hidabo nació en 2004 en Curuzú Cuatiá como un emprendimiento familiar enfocado en dar respuesta a una necesidad del campo, la falta de fósforo en los suelos del litoral, fundamental para la nutrición bovina.</p>
+      <p>Con <strong>más de 20 años de experiencia</strong>, hemos consolidado una <strong>planta propia</strong> dedicada a la fabricación de alimentos balanceados y suplementos minerales confiables y efectivos, destacando nuestra especialización en la producción de <strong>ceniza de hueso de alta calidad.</strong></p>
+      <p><strong>Trabajamos codo a codo con los productores</strong>, brindando asesoramiento técnico personalizado, soluciones eficientes de logística propia y servicio de camiones jaula para transporte de ganado. De esta manera, garantizamos que cada solución llegue a tiempo y en forma.</p>
+      <p>Nuestra filosofía es simple: <strong>Cumplir con el productor.</strong></p>
     </div>
     <div id="carousel-root"></div>
       <div class="academia-cta">
