--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section class="hero">
-    <h1>Suplementos minerales para bovinos y soluciones técnicas para el Agro</h1>
+    <h1>Suplementos minerales para bovinos y<br>soluciones técnicas para el Agro</h1>
     <p>Nutriendo el campo, impulsando la producción.</p>
   </section>
 
