--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </header>
 
   <section class="hero">
-    <h1>Suplementos minerales para bovinos y<br>soluciones técnicas para el Agro</h1>
-    <p>Nutriendo el campo, impulsando la producción.</p>
+    <h1>Nutriendo el campo, impulsando la producción</h1>
+    <p>Suplementos minerales para bovinos y soluciones técnicas para el Agro.</p>
   </section>
 
   <section id="quienes" class="section">
