--- a/index.html
+++ b/index.html
@@ -42,20 +42,16 @@
     <h2>Nuestros Productos</h2>
     <div class="productos">
       <div class="producto">
-        <h3>Suplementos Minerales</h3>
-        <p>Fórmulas diseñadas para optimizar la salud y rendimiento del ganado bovino en función de especificaciones del cliente.</p>
-      </div>
-      <div class="producto">
-        <h3>Suplementación de alta biodisponibilidad</h3>
-        <p>Elaboramos fósforo nutricional pensado para bovinos.</p>
+        <h3>Suplementos Minerales de alta biodisponibilidad</h3>
+        <p>Elaboramos suplementos minerales a base de ceniza de hueso, asegurando un fósforo nutricional de alta biodisponibilidad. Ofrecemos fórmulas personalizadas para optimizar la salud y el rendimiento de tu ganado.</p>
       </div>
       <div class="producto">
         <h3>Soluciones Técnicas</h3>
-        <p>Asesoramiento especializado para impulsar la productividad agropecuaria.</p>
+        <p>Brindamos asesoramiento técnico especializado para impulsar la productividad agropecuaria. Nuestros expertos trabajan en conjunto con los productores para ofrecer soluciones a medida.</p>
       </div>
       <div class="producto">
         <h3>Gestión Logística</h3>
-        <p>Ofrecemos entrega directa a campo y servicio de camiones jaula para transporte de ganado.</p>
+        <p>Ofrecemos un servicio integral de logística propia que incluye entrega directa de suplementos a campo y servicio de camiones jaula para transporte de ganado, asegurando que sus productos y animales lleguen a destino de forma segura y eficiente.</p>
       </div>
     </div>
   </section>
