--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <header class="hero">
     <a href="/" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
     <nav>
+      <a href="/">Inicio</a>
       <a href="#quienes">Quiénes Somos</a>
       <a href="#productos">Productos</a>
       <a href="fotos.html">Academia Hidabo</a>
