--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="productos">
       <div class="producto">
         <h3>Suplementos Minerales de alta biodisponibilidad</h3>
-        <p>Elaboramos suplementos minerales a base de ceniza de hueso, asegurando un fósforo nutricional de alta biodisponibilidad. Ofrecemos fórmulas personalizadas para optimizar la salud y el rendimiento de tu ganado.</p>
+        <p>Elaboramos suplementos de fosforo a base de ceniza de hueso. Ofrecemos fórmulas personalizadas para optimizar la salud y el rendimiento de tu ganado.</p>
       </div>
       <div class="producto">
         <h3>Soluciones Técnicas</h3>
@@ -52,7 +52,7 @@
       </div>
       <div class="producto">
         <h3>Gestión Logística</h3>
-        <p>Ofrecemos un servicio integral de logística propia que incluye entrega directa de suplementos a campo y servicio de camiones jaula para transporte de ganado, asegurando que sus productos y animales lleguen a destino de forma segura y eficiente.</p>
+        <p>Ofrecemos entrega directa de suplementos al campo y servicio de camiones jaula para transporte de ganado, asegurando que sus productos y animales lleguen a destino de forma segura y eficiente.</p>
       </div>
     </div>
   </section>
