--- a/fotos.html
+++ b/fotos.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HIDABO - Academia</title>
+  <meta name="description" content="En la Academia Hidabo encontrarás consejos y soluciones técnicas para optimizar la nutrición bovina y resolver problemas frecuentes.">
+  <title>Academia Hidabo | Nutrición Bovina, Asesoramiento y Soluciones para el Agro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
