--- a/fotos.html
+++ b/fotos.html
@@ -10,6 +10,7 @@
   <header class="hero">
     <a href="/" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
     <nav>
+      <a href="/">Inicio</a>
       <a href="/#quienes">Quiénes Somos</a>
       <a href="/#productos">Productos</a>
       <a href="fotos.html">Academia Hidabo</a>
@@ -18,8 +19,8 @@
   </header>
 
   <section class="hero">
-    <h1>Academia Hidabo</h1>
-    <p>Consejos, cuidados, optimización y soluciones a problemas frecuentes.</p>
+    <h1>Academia Hidabo: Consejos y soluciones sobre nutrición bovina</h1>
+    <p>Guías, cuidados y optimización para problemas frecuentes en el agro.</p>
   </section>
 
   <section id="academia" class="section">
