--- a/fotos.html
+++ b/fotos.html
@@ -19,8 +19,8 @@
   </header>
 
   <section class="hero">
-    <h1>Academia Hidabo: Consejos y soluciones sobre nutrición bovina</h1>
-    <p>Guías, cuidados y optimización para problemas frecuentes en el agro.</p>
+    <h1>Academia Hidabo</h1>
+    <p>Consejos y guías sobre nutrición bovina y soluciones tecnicas para el agro.</p>
   </section>
 
   <section id="academia" class="section">
