--- a/fotos.html
+++ b/fotos.html
@@ -48,7 +48,7 @@
       <div class="card">
         <img src="fotosacademia/3.jpg" alt="Vaca con su ternero, demostrando una exitosa eficiencia reproductiva gracias a la nutrición bovina">
         <h3>Eficiencia reproductiva probada</h3>
-        <p class="subtitulo">Suplementar al 9% de P mejora la preñez y ciclicidad</p>
+        <p class="subtitulo">Suplementar al 9% de fósforo mejora la preñez y ciclicidad</p>
         
         <button class="toggle-btn">Ver más</button>
         <div class="extra-content">
