--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
       <p>Nuestra filosofía es simple: <strong>Cumplir con el productor.</strong></p>
     </div>
     <div id="carousel-root"></div>
-      <div class="academia-cta">
-        <a href="fotos.html" class="btn-academia">Ver Academia Hidabo</a>
-      </div>
-    </section>
+  </section>
+
+    <section id="introduccion-academia" class="section">
+    <div class="intro-academia-container">
+      <h2>Conocimiento para potenciar tu producción</h2>
+      <p>En la Academia Hidabo, compartimos nuestra experiencia técnica a través de consejos y guías sobre nutrición bovina, suplementación mineral y soluciones técnicas para el agro.</p>
+      <div class="academia-cta">
+        <a href="fotos.html" class="btn-academia">Ver Academia Hidabo</a>
+      </div>
+    </div>
+  </section>
 
   <section id="productos" class="section">
     <h2>Nuestros Productos</h2>
