--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
   <header class="hero">
-    <a href="/" class="logo-link"><img src="Logo.hidabo.blanco.png" alt="HIDABO Logo"></a>
-    <nav>
+    <a href="/" class="logo-link">
+      <img src="Logo.hidabo.blanco.png" alt="HIDABO Logo">
+      <span class="logo-text">HIDABO</span>
+    </a>
+    <nav>
       <a href="/">Inicio</a>
       <a href="#quienes">Quiénes Somos</a>
       <a href="#productos">Productos</a>
