--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="carousel-root"></div>
   </section>
 
-    <section id="introduccion-academia" class="section-compacta">
+    <section id="introduccion-academia" class="section">
     <div class="intro-academia-container">
       <h2>Conocimiento para potenciar tu producción</h2>
       <p>En la Academia Hidabo, compartimos nuestra experiencia técnica a través de consejos y guías sobre nutrición bovina, suplementación mineral y soluciones técnicas para el agro.</p>
