--- a/fotos.html
+++ b/fotos.html
@@ -9,8 +9,7 @@
 <body>
   <header class="hero">
     <a href="/" class="logo-link">
-      <img src="Logo.hidabo.blanco.png" alt="HIDABO Logo">
-      <span class="logo-text">HIDABO</span>
+        <img src="Logo-Hidabo-con-texto.png" alt="Logo de Hidabo, suplementos minerales para bovinos">
     </a>
     <nav>
       <a href="/">Inicio</a>
