--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
       <p><strong>Trabajamos codo a codo con los productores</strong>, brindando asesoramiento técnico personalizado, soluciones eficientes de logística propia y servicio de camiones jaula para transporte de ganado. De esta manera, garantizamos que cada solución llegue a tiempo y en forma.</p>
       <p>Nuestra filosofía es simple: <strong>Cumplir con el productor.</strong></p>
     </div>
-    <div id="carousel-root"></div>
-  </section>
+    <div class="carousel">
+      <div class="slides">
+        <img src="img/foto1.jpeg" alt="Suplementos minerales 1" />
+        <img src="img/foto2.jpeg" alt="Suplementos minerales 2" />
+        <img src="img/foto3.jpeg" alt="Suplementos minerales 3" />
+      </div>
+    </div>
+  </section>
 
     <section id="introduccion-academia" class="section">
     <div class="intro-academia-container">
@@ -91,6 +97,5 @@
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
   </footer>
-  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
