Add viewport meta to fotos page

--- a/fotos.html
+++ b/fotos.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="En la Academia Hidabo encontrarás consejos y soluciones técnicas para optimizar la nutrición bovina y resolver problemas frecuentes.">
   <title>Academia Hidabo | Nutrición Bovina, Asesoramiento y Soluciones para el Agro</title>
   <link rel="stylesheet" href="style.css">
