--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
 
     <div class="contact-card">
       <h3>Iván Bottero - Gerencia</h3>
-      <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank">+54 9 3774 447740</a></p>
+      <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank" rel="noopener noreferrer">+54 9 3774 447740</a></p>
       <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
     </div>
 
     <div class="contact-card">
       <h3>Hernán Cardozo - Administración</h3>
-      <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank">+54 9 3774 637842</a></p>
+      <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank" rel="noopener noreferrer">+54 9 3774 637842</a></p>
       <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
     </div>
     <div class="contact-card">
       <h3>Dr. Dario Bottero - Asesor técnico</h3>
       <p>Médico Veterinario - Matrícula Profesional 0081</p>
-      <p>📞 WhatsApp: <a href="https://wa.me/5493774637841" target="_blank">+54 9 3774 637841</a></p>
+      <p>📞 WhatsApp: <a href="https://wa.me/5493774637841" target="_blank" rel="noopener noreferrer">+54 9 3774 637841</a></p>
       <p>📧 Email: <a href="mailto:asesoria@hidabo.com">asesoria@hidabo.com</a></p>
     </div>
   </section>
