--- a/fotos.html
+++ b/fotos.html
@@ -93,7 +93,7 @@
         const content = btn.nextElementSibling;
         if (content.style.display === 'block') {
           content.style.display = 'none';
-          btn.textContent = 'Ver m\u00e1s';
+          btn.textContent = 'Ver más';
         } else {
           content.style.display = 'block';
           btn.textContent = 'Cerrar';
