Wrap content in main element

--- a/fotos.html
+++ b/fotos.html
@@ -19,7 +19,7 @@
       <a href="/#contacto">Contacto</a>
     </nav>
   </header>
-
+  <main>
   <section class="hero">
     <h1>Academia Hidabo</h1>
     <p>Consejos y guías sobre nutrición bovina y soluciones tecnicas para el agro.</p>
@@ -86,6 +86,7 @@
       </div>
     </div>
   </section>
+  </main>
 
   <script>
     document.querySelectorAll('.toggle-btn').forEach(btn => {
