--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#contacto">Contacto</a>
     </nav>
   </header>
-
+  <main>
   <section class="hero">
     <h1>Nutriendo el campo, impulsando la producción</h1>
     <p>Suplementos minerales para bovinos y soluciones técnicas para el Agro.</p>
@@ -86,6 +86,8 @@
       <p>📧 Email: <a href="mailto:asesoria@hidabo.com">asesoria@hidabo.com</a></p>
     </div>
   </section>
+
+  </main>
 
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
