--- a/fotos.html
+++ b/fotos.html
@@ -87,20 +87,7 @@
     </div>
   </section>
 
-  <script>
-    document.querySelectorAll('.toggle-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const content = btn.nextElementSibling;
-        if (content.style.display === 'block') {
-          content.style.display = 'none';
-          btn.textContent = 'Ver m\u00e1s';
-        } else {
-          content.style.display = 'block';
-          btn.textContent = 'Cerrar';
-        }
-      });
-    });
-  </script>
+  <script src="academia.js" defer></script>
 
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
