Add Open Graph metadata

--- a/fotos.html
+++ b/fotos.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="En la Academia Hidabo encontrarás consejos y soluciones técnicas para optimizar la nutrición bovina y resolver problemas frecuentes.">
+  <meta property="og:title" content="Academia Hidabo | Nutrición Bovina, Asesoramiento y Soluciones para el Agro">
+  <meta property="og:description" content="En la Academia Hidabo encontrarás consejos y soluciones técnicas para optimizar la nutrición bovina y resolver problemas frecuentes.">
+  <meta property="og:image" content="fotosacademia/1.png">
   <title>Academia Hidabo | Nutrición Bovina, Asesoramiento y Soluciones para el Agro</title>
   <link rel="stylesheet" href="style.css">
 </head>
