Move contact section to separate page

--- a/fotos.html
+++ b/fotos.html
@@ -20,7 +20,7 @@
       <a href="/#quienes">Quiénes Somos</a>
       <a href="/#productos">Productos</a>
       <a href="fotos.html">Academia Hidabo</a>
-      <a href="/#contacto">Contacto</a>
+      <a href="contacto.html">Contacto</a>
     </nav>
   </header>
   <main>
