--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#quienes">Quiénes Somos</a>
       <a href="#productos">Productos</a>
       <a href="fotos.html">Academia Hidabo</a>
-      <a href="#contacto">Contacto</a>
+      <a href="contacto.html">Contacto</a>
     </nav>
   </header>
   <main>
@@ -65,28 +65,6 @@
         <h3>Gestión Logística</h3>
         <p>Ofrecemos entrega directa de suplementos al campo y servicio de camiones jaula para transporte de ganado, asegurando que sus productos y animales lleguen a destino de forma segura y eficiente.</p>
       </div>
-    </div>
-  </section>
-
-  <section id="contacto" class="section">
-    <h2>Contacto</h2>
-
-    <div class="contact-card">
-      <h3>Iván Bottero - Gerencia</h3>
-      <p>📞 WhatsApp: <a href="https://wa.me/5493774447740" target="_blank" rel="noopener noreferrer">+54 9 3774 447740</a></p>
-      <p>📧 Email: <a href="mailto:botteroivan@hidabo.com">botteroivan@hidabo.com</a></p>
-    </div>
-
-    <div class="contact-card">
-      <h3>Hernán Cardozo - Administración</h3>
-      <p>📞 WhatsApp: <a href="https://wa.me/5493774637842" target="_blank" rel="noopener noreferrer">+54 9 3774 637842</a></p>
-      <p>📧 Email: <a href="mailto:hernan@hidabo.com">hernan@hidabo.com</a></p>
-    </div>
-    <div class="contact-card">
-      <h3>Dr. Dario Bottero - Asesor técnico</h3>
-      <p>Médico Veterinario - Matrícula Profesional 0081</p>
-      <p>📞 WhatsApp: <a href="https://wa.me/5493774637841" target="_blank" rel="noopener noreferrer">+54 9 3774 637841</a></p>
-      <p>📧 Email: <a href="mailto:asesoria@hidabo.com">asesoria@hidabo.com</a></p>
     </div>
   </section>
 
