--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
       <p><strong>Trabajamos codo a codo con los productores</strong>, brindando asesoramiento técnico personalizado, soluciones eficientes de logística propia y servicio de camiones jaula para transporte de ganado. De esta manera, garantizamos que cada solución llegue a tiempo y en forma.</p>
       <p>Nuestra filosofía es simple: <strong>Cumplir con el productor.</strong></p>
     </div>
+    <div class="carousel">
+      <img src="fotoscarrusel/foto1.jpeg" alt="Imagen 1 de Hidabo">
+      <img src="fotoscarrusel/foto2.jpeg" alt="Imagen 2 de Hidabo">
+      <img src="fotoscarrusel/foto3.jpeg" alt="Imagen 3 de Hidabo">
+      <img src="fotoscarrusel/foto4.jpg" alt="Imagen 4 de Hidabo">
+      <img src="fotoscarrusel/foto5.jpg" alt="Imagen 5 de Hidabo">
+      <img src="fotoscarrusel/foto6.jpg" alt="Imagen 6 de Hidabo">
+      <img src="fotoscarrusel/foto7.jpg" alt="Imagen 7 de Hidabo">
+      <img src="fotoscarrusel/foto8.jpg" alt="Imagen 8 de Hidabo">
+      <img src="fotoscarrusel/foto9.jpg" alt="Imagen 9 de Hidabo">
+    </div>
   </section>
 
     <section id="introduccion-academia" class="section">
@@ -73,5 +84,19 @@
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
   </footer>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const slides = document.querySelectorAll('.carousel img');
+      let index = 0;
+      if (slides.length > 0) {
+        slides[index].classList.add('active');
+        setInterval(() => {
+          slides[index].classList.remove('active');
+          index = (index + 1) % slides.length;
+          slides[index].classList.add('active');
+        }, 2000);
+      }
+    });
+  </script>
 </body>
 </html>
