--- a/fotos.html
+++ b/fotos.html
@@ -9,6 +9,7 @@
   <meta property="og:image" content="fotosacademia/1.png">
   <title>Academia Hidabo | Nutrición Bovina, Asesoramiento y Soluciones para el Agro</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
   <header class="hero">
