--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Hidabo fabrica suplementos minerales para bovinos a base de ceniza de hueso, ofreciendo logística directa a campo, asesoramiento técnico y transporte de ganado.">
+  <meta name="description" content="Hidabo fabrica suplementos minerales para bovinos a base de ceniza de hueso, ofrece logística directa a campo, asesoramiento técnico y transporte de ganado.">
   <meta property="og:title" content="Hidabo | Suplementos Minerales para Bovinos a base de Ceniza de Hueso">
-  <meta property="og:description" content="Hidabo fabrica suplementos minerales para bovinos a base de ceniza de hueso, ofreciendo logística directa a campo, asesoramiento técnico y transporte de ganado.">
+  <meta property="og:description" content="Hidabo fabrica suplementos minerales para bovinos a base de ceniza de hueso, ofrece logística directa a campo, asesoramiento técnico y transporte de ganado.">
   <meta property="og:image" content="Logo-Hidabo-con-texto.png">
   <title>Hidabo | Suplementos Minerales para Bovinos a base de Ceniza de Hueso</title>
   <link rel="stylesheet" href="style.css">
