--- a/index.html
+++ b/index.html
@@ -49,16 +49,6 @@
     </div>
   </section>
 
-    <section id="introduccion-academia" class="section">
-    <div class="intro-academia-container">
-      <h2>Conocimiento para potenciar tu producción</h2>
-      <p>En la Academia Hidabo, compartimos nuestra experiencia técnica a través de consejos y guías sobre nutrición bovina, suplementación mineral y soluciones técnicas para el agro.</p>
-      <div class="academia-cta">
-        <a href="fotos.html" class="btn-academia">Ver Academia Hidabo</a>
-      </div>
-    </div>
-  </section>
-
   <section id="productos" class="section">
     <h2>Nuestros Productos</h2>
     <div class="productos">
@@ -76,6 +66,12 @@
       </div>
     </div>
   </section>
+
+  <section class="cta-contacto-simple-section">
+    <div class="cta-contacto-simple">
+      <a href="#contacto" class="btn-contacto-simple">Contacto</a>
+    </div>
+  </section>
 
   </main>
 
