--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="Hidabo fabrica suplementos minerales para bovinos a base de ceniza de hueso, ofrece logística directa a campo, asesoramiento técnico y transporte de ganado.">
   <meta property="og:image" content="Logo-Hidabo-con-texto.png">
   <title>Hidabo | Suplementos Minerales para Bovinos a base de Ceniza de Hueso</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
