--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@
       if (slides.length > 0) {
         slides[index].classList.add('active');
         setInterval(() => {
-          slides[index].classList.remove('active');
+          const current = slides[index];
           index = (index + 1) % slides.length;
-          slides[index].classList.add('active');
+          const next = slides[index];
+          next.classList.add('active');
+          setTimeout(() => {
+            current.classList.remove('active');
+          }, 100);
         }, 2000);
       }
     });
