--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section id="quienes" class="section">
     <h2>Quiénes Somos</h2>
     <div class="quienes-block">
-      <p>Hidabo nació en 2004 en Curuzú Cuatiá como un emprendimiento familiar enfocado en dar respuesta a una necesidad del campo, la falta de fósforo en los suelos del litoral, fundamental para la nutrición bovina.</p>
+      <p>Hidabo nació en 2004 en Curuzú Cuatiá, Corrientes, como un emprendimiento familiar enfocado en dar respuesta a una necesidad del campo, la falta de fósforo en los suelos del litoral, fundamental para la nutrición bovina.</p>
       <p>Con <strong>más de 20 años de experiencia</strong>, hemos consolidado una <strong>planta propia</strong> dedicada a la fabricación de alimentos balanceados y suplementos minerales confiables y efectivos, destacando nuestra especialización en la producción de <strong>ceniza de hueso de alta calidad.</strong></p>
       <p><strong>Trabajamos codo a codo con los productores</strong>, brindando asesoramiento técnico personalizado, soluciones eficientes de logística propia y servicio de camiones jaula para transporte de ganado. De esta manera, garantizamos que cada solución llegue a tiempo y en forma.</p>
       <p>Nuestra filosofía es simple: <strong>Cumplir con el productor.</strong></p>
