chore: static vercel setup (remove vite build)

--- a/academia.html
+++ b/academia.html
@@ -92,21 +92,7 @@
     </div>
   </section>
   </main>
-
-  <script>
-    document.querySelectorAll('.toggle-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const content = btn.nextElementSibling;
-        if (content.style.display === 'block') {
-          content.style.display = 'none';
-          btn.textContent = 'Ver más';
-        } else {
-          content.style.display = 'block';
-          btn.textContent = 'Cerrar';
-        }
-      });
-    });
-  </script>
+  <script src="js/academia.js" defer></script>
 
   <footer>
     &copy; 2025 HIDABO S.R.L. - Todos los derechos reservados.
