--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <section class="cta-contacto-simple-section">
     <div class="cta-contacto-simple">
-      <a href="#contacto" class="btn-contacto-simple">Contacto</a>
+      <a href="contacto.html" class="btn-contacto-simple">Contacto</a>
     </div>
   </section>
 
